# CityStateMapping

./: .gitignore  README.md  main.py  requirements.txt
.github/workflows/: main.yml
CityStateMap/: .coverage  .env  .gitignore  LICENSE.txt  README.md  main.py  manage.py  pytest.ini  requirements.txt  setup.cfg  setup.py
CityStateMap/.github/workflows/: main.yml
CityStateMap/CityStateMap/: asgi.py  settings.py  urls.py  wsgi.py
CityStateMap/find_indian_state/: __init__.py  indian_cities.py  spelling_checker.py  views.py
CityStateMap/find_indian_state/tests/: test_find_state.py
CityStateMap/find_state/: apps.py  indian_cities.py  models.py  spelling_checker.py  urls.py  views.py
CityStateMap/find_state/tests/: test_fast_api.py  test_find_state.py
CityStateMap/htmlcov/: CityStateMap___init___py.html  find_state___init___py.html  find_state_admin_py.html  find_state_indian_cities_py.html  find_state_models_py.html  find_state_spelling_checker_py.html  find_state_views_py.html  index.html  main_py.html  status.json
