[metadata]
name = find_state
version = 1.0.0
author = Stuti Pathak
author_email = stuti.pathak@bridgelabz.com
description = get indian state by city name or by coordinates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BridgeLabzSource/CityStateMapping
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True